adicionando documentação para updateOpenigsHandler
