# handler/response.go
@@ -45,6 +45,10 @@ type ShowOpeningResponse struct {
 	Message string                 `json:"message"`
 	Data    schema.OpeningResponse `json:"data"`
 }
+type UpdateOpeningResponse struct {
+	Message string                 `json:"message"`
+	Data    schema.OpeningResponse `json:"data"`
+}
 type ListOpeningsResponse struct {
 	Message string                   `json:"message"`
 	Data    []schema.OpeningResponse `json:"data"`
